--- a/public/auction.css
+++ b/public/auction.css
@@ -174,6 +174,10 @@ body.browser-view {
   /* ⬇️ ИЗМЕНЕНИЕ: Добавляем "резкость" ⬇️ */
   filter: contrast(115%); 
   /* ⬆️ ИЗМЕНЕНИЕ: Конец ⬆️ */
+
+  /* ⬇️ ВОТ ЭТО ИЗМЕНЕНИЕ: Добавляем черный фон ⬇️ */
+  background-color: #000;
+  /* ⬆️ КОНЕЦ ИЗМЕНЕНИЯ ⬆️ */
 }
 
 .card-info-area {
